# openyamm

./: .gitignore  ACCEPTANCE.md  AGENTS.md  ARCHITECTURE.md  ASSET_PIPELINE.md  CMakeLists.txt  CODING_TASK_TEMPLATE.md  ENGLISHT_BIN_FILES.md  PLAN.md  PROGRESS.md  README.md  RENDERING_NOTES.md  REPO_LAYOUT.md  STYLE_GUIDE.md  TASK_QUEUE.md  TECH_STACK.md  codex-session.txt  codex.session  settings.ini
editor/: CMakeLists.txt
editor/app/: EditorApplication.cpp  EditorApplication.h  EditorImGuiBgfxRenderer.cpp  EditorImGuiBgfxRenderer.h  EditorMainWindow.cpp  EditorMainWindow.h  main.cpp
editor/document/: EditorDocument.cpp  EditorDocument.h  EditorSession.cpp  EditorSession.h  IndoorGeometryMetadata.cpp  IndoorGeometryMetadata.h  OutdoorGeometryMetadata.cpp  OutdoorGeometryMetadata.h  OutdoorMapPackageMetadata.cpp  OutdoorMapPackageMetadata.h  OutdoorTerrainMetadata.cpp  OutdoorTerrainMetadata.h
editor/headless/: EditorHeadlessDiagnostics.cpp  EditorHeadlessDiagnostics.h
editor/import/: IndoorSourceGeometryCompiler.cpp  IndoorSourceGeometryCompiler.h  IndoorSourceGeometryImport.cpp  IndoorSourceGeometryImport.h  ObjModelImport.cpp  ObjModelImport.h
editor/viewport/: EditorOutdoorViewport.cpp  EditorOutdoorViewport.h
engine/: ApplicationConfig.cpp  ApplicationConfig.h  AssetFileSystem.cpp  AssetFileSystem.h  AssetPaths.cpp  AssetPaths.h  AssetScaleTier.cpp  AssetScaleTier.h  AudioSystem.cpp  AudioSystem.h  BgfxContext.cpp  BgfxContext.h  CMakeLists.txt  EngineApplication.cpp  EngineApplication.h  ImageAssetLoader.cpp  ImageAssetLoader.h  TextTable.cpp  TextTable.h
engine/scripting/: LuaStateOwner.cpp  LuaStateOwner.h
game/: ActorNameResolver.cpp  ActorNameResolver.h  AppMode.h  BinaryReader.h  CMakeLists.txt  CharacterDollTable.cpp  CharacterInspectTable.cpp  CharacterInspectTable.h  CharacterState.h  ChestTable.cpp  ChestTable.h  ClassSkillTable.cpp  ClassSkillTable.h  EventDialogContent.cpp  EventDialogContent.h  EventIr.cpp  EventIr.h  EventRuntime.cpp  EventRuntime.h  EvtProgram.cpp  EvtProgram.h  FaceAnimationTable.cpp  FaceAnimationTable.h  FaceEnums.h  GameApplication.cpp  GameApplication.h  GameAudioSystem.cpp  GameAudioSystem.h  GameDataLoader.cpp  GameDataLoader.h  GameMechanics.cpp  GameMechanics.h  GameSession.cpp  GameSession.h  GenericActorDialog.cpp  GenericActorDialog.h  HeadlessOutdoorDiagnostics.cpp  HeadlessOutdoorDiagnostics.h  HouseInteraction.cpp  HouseInteraction.h  (+111 more)
game/app/: AppMode.h  GameApplication.cpp  GameApplication.h  GameInputSystem.cpp  GameInputSystem.h  GameSession.cpp  GameSession.h  GameSettings.cpp  GameSettings.h  KeyboardBindings.cpp  KeyboardBindings.h  ScreenManager.cpp  ScreenManager.h  main.cpp
game/arcomage/: ArcomageAi.cpp  ArcomageAi.h  ArcomageLoader.cpp  ArcomageLoader.h  ArcomageRules.cpp  ArcomageRules.h  ArcomageTypes.h
game/audio/: GameAudioSystem.cpp  GameAudioSystem.h  HouseVideoPlayer.cpp  HouseVideoPlayer.h  SoundCatalog.cpp  SoundCatalog.h  SoundIds.h  SoundRef.h
game/content/: ContentManifest.cpp  ContentManifest.h
game/data/: ActorNameResolver.cpp  ActorNameResolver.h  GameDataLoader.cpp  GameDataLoader.h  GameDataRepository.cpp  GameDataRepository.h
game/events/: EventDialogContent.cpp  EventDialogContent.h  EventIr.cpp  EventIr.h  EventRuntime.cpp  EventRuntime.h  EvtEnums.h  EvtProgram.cpp  EvtProgram.h  ISceneEventContext.h  ScriptedEventProgram.cpp  ScriptedEventProgram.h
game/fx/: FxSharedTypes.h  ParticleRecipes.cpp  ParticleRecipes.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticleSystem.cpp  ParticleSystem.h  WorldFxRenderResources.cpp  WorldFxRenderResources.h  WorldFxRenderer.cpp  WorldFxRenderer.h  WorldFxSystem.cpp  WorldFxSystem.h
game/gameplay/: ChestRuntime.cpp  ChestRuntime.h  CorpseLootRuntime.cpp  CorpseLootRuntime.h  GameMechanics.cpp  GameMechanics.h  GameplayActionController.cpp  GameplayActionController.h  GameplayActorAiSystem.cpp  GameplayActorAiSystem.h  GameplayActorAiTypes.h  GameplayActorService.cpp  GameplayActorService.h  GameplayCombatController.cpp  GameplayCombatController.h  GameplayController.cpp  GameplayController.h  GameplayDebugDumper.cpp  GameplayDebugDumper.h  GameplayDialogContextBuilder.h  GameplayDialogController.cpp  GameplayDialogController.h  GameplayDialogUiFlow.cpp  GameplayDialogUiFlow.h  (+60 more)
tests/: ArcomageRegressionTests.cpp  ArcomageTestHarness.h  AssetFileSystemTests.cpp  AudioRegressionTests.cpp  CMakeLists.txt  CharacterSheetRegressionTests.cpp  ChestRegressionTests.cpp  ContentManifestTests.cpp  GameplayActorAiSystemTests.cpp  GameplayProjectileServiceTests.cpp  GameplayRuleRegressionTests.cpp  GameplayScreenRuntimeTestStubs.cpp  HouseDialogueRegressionTests.cpp  HouseDialogueTestHarness.h  ImageAssetLoaderTests.cpp  IndoorCollisionPrimitivesTests.cpp  IndoorLightingRuntimeTests.cpp  IndoorPortalVisibilityTests.cpp  InventoryEquipRegressionTests.cpp  MapDeltaDataTests.cpp  MapStatsRegressionTests.cpp  MonsterTableRegressionTests.cpp  PartyRegressionTests.cpp  PartySpellTestHarness.h  RegressionGameData.cpp  RegressionGameData.h  RegressionMapLoader.cpp  RegressionMapLoader.h  ScriptedMapRegressionTests.cpp  SpellRegressionTests.cpp  SpellbookUiLayoutTests.cpp  TableRegressionTests.cpp  TestGameStubs.cpp  TextTableTests.cpp
tools/: CMakeLists.txt  EventIr.cpp  EventIr.h  EventIrLegacyImport.cpp  EventIrLegacyImport.h  LegacyLuaExport.cpp  LegacyLuaExport.h  analyze_decompiled_event_semantics.py  event_asset_export_main.cpp  export_decoration_table.py  export_icon_frame_table.py  export_indoor_scene_yml.py  export_mm6_world_tables.py  export_monster_table.py  export_object_table.py  export_outdoor_scene_yml.py  export_portrait_frame_table.py  export_sprite_frame_table.py  export_terrain_tile_data.py  export_texture_frame_table.py  lua_event_export.example.ini  lua_event_export.mm6.ini  lua_event_export.mm7.ini  openyamm_shaderc_stubs.cpp  remap_mm8_outdoor_tile_lookups_to_mmerge.py  remap_mm8_scene_decorations_to_mmerge.py  run_dialogue_regression.sh  stage_indoor_scene_packages.py  transcode_bik.sh  transcode_smk.sh  upscale_assets.sh
(+3397 files in other folders)
