include(Ffmpeg)
openyamm_configure_ffmpeg()

add_executable(openyamm
    app/ScreenManager.cpp
    app/GameInputSystem.cpp
    arcomage/ArcomageAi.cpp
    arcomage/ArcomageLoader.cpp
    arcomage/ArcomageRules.cpp
    data/ActorNameResolver.cpp
    data/GameDataRepository.cpp
    app/GameSession.cpp
    audio/GameAudioSystem.cpp
    tables/ChestTable.cpp
    tables/JournalAutonoteTable.cpp
    tables/JournalHistoryTable.cpp
    tables/JournalQuestTable.cpp
    tables/CharacterInspectTable.cpp
    tables/CharacterDollTable.cpp
    tables/ClassMultiplierTable.cpp
    tables/ClassSkillTable.cpp
    events/EventDialogContent.cpp
    events/EventRuntime.cpp
    events/ScriptedEventProgram.cpp
    tables/FaceAnimationTable.cpp
    fx/ParticleRecipes.cpp
    fx/ParticleRenderer.cpp
    fx/ParticleSystem.cpp
    fx/WorldFxRenderer.cpp
    fx/WorldFxRenderResources.cpp
    fx/WorldFxSystem.cpp
    gameplay/GameMechanics.cpp
    gameplay/GameplayActionController.cpp
    gameplay/GameplayCombatController.cpp
    gameplay/GameplayController.cpp
    gameplay/CorpseLootRuntime.cpp
    gameplay/ChestRuntime.cpp
    gameplay/GameplayActorAiSystem.cpp
    gameplay/GameplayActorService.cpp
    gameplay/GameplayDialogController.cpp
    gameplay/GameplayDialogUiFlow.cpp
    gameplay/GameplayFxService.cpp
    gameplay/GameplayHeldItemController.cpp
    gameplay/GameplayHudInputController.cpp
    gameplay/GameplayInputController.cpp
    gameplay/GameplayInteractionController.cpp
    gameplay/GameplayItemService.cpp
    gameplay/GameplayWorldItemInteraction.cpp
    gameplay/InteractiveDecorationRules.cpp
    gameplay/MonsterSpellSupport.cpp
    gameplay/GameplayOverlayInputController.cpp
    gameplay/GameplayPartyOverlayInputController.cpp
    gameplay/GameplayProjectileService.cpp
    gameplay/GameplayScreenController.cpp
    gameplay/GameplayScreenState.cpp
    gameplay/GameplaySaveLoadUiSupport.cpp
    gameplay/GameplaySpellActionController.cpp
    gameplay/GameplaySpellService.cpp
    gameplay/GenericActorDialog.cpp
    gameplay/HouseInteraction.cpp
    gameplay/HouseServiceRuntime.cpp
    gameplay/JournalQuestRuntime.cpp
    gameplay/SavePreviewImage.cpp
    gameplay/StoryTextFormatter.cpp
    gameplay/TreasureRuntime.cpp
    audio/HouseVideoPlayer.cpp
    content/ContentManifest.cpp
    items/InventoryItemUseRuntime.cpp
    items/InventoryItemMixingRuntime.cpp
    maps/IndoorSceneYml.cpp
    maps/MapDeltaData.cpp
    maps/OutdoorSceneYml.cpp
    maps/TerrainTileData.cpp
    data/GameDataLoader.cpp
    outdoor/HeadlessOutdoorDiagnostics.cpp
    tables/HouseTable.cpp
    tables/IconFrameTable.cpp
    items/ItemEquipPosTable.cpp
    items/ItemEnchantTables.cpp
    items/ItemEnchantRuntime.cpp
    items/ItemGenerator.cpp
    items/ItemRuntime.cpp
    tables/ItemTable.cpp
    indoor/IndoorRenderer.cpp
    indoor/IndoorGameView.cpp
    indoor/IndoorCollisionPrimitives.cpp
    indoor/IndoorGeometryUtils.cpp
    indoor/IndoorLightingRuntime.cpp
    indoor/IndoorMapData.cpp
    indoor/IndoorMovementController.cpp
    indoor/IndoorPartyRuntime.cpp
    indoor/IndoorPortalVisibility.cpp
    indoor/IndoorWorldRuntime.cpp
    maps/MapAssetLoader.cpp
    maps/MapIdentity.cpp
    maps/MapRegistry.cpp
    tables/MapStats.cpp
    gameplay/MasteryTeacherDialog.cpp
    tables/MonsterProjectileTable.cpp
    tables/MonsterTable.cpp
    tables/NpcDialogTable.cpp
    tables/ObjectTable.cpp
    outdoor/OutdoorBillboardRenderer.cpp
    outdoor/OutdoorSpatialFxRuntime.cpp
    outdoor/OutdoorGameplayInputController.cpp
    outdoor/OutdoorInteractionController.cpp
    outdoor/OutdoorMapData.cpp
    outdoor/OutdoorPresentationController.cpp
    outdoor/OutdoorRenderer.cpp
    outdoor/OutdoorGeometryUtils.cpp
    outdoor/OutdoorMovementController.cpp
    outdoor/OutdoorMovementDriver.cpp
    outdoor/OutdoorPartyRuntime.cpp
    outdoor/OutdoorWorldRuntime.cpp
    party/Party.cpp
    party/EventSpellBuffs.cpp
    party/LloydsBeaconRuntime.cpp
    party/PartySpellSystem.cpp
    items/PriceCalculator.cpp
    tables/ReadableScrollTable.cpp
    render/TextureFiltering.cpp
    tables/PortraitFxEventTable.cpp
    tables/PotionMixingTable.cpp
    tables/PortraitEnums.cpp
    tables/PortraitFrameTable.cpp
    tables/RaceStartingStatsTable.cpp
    tables/RosterTable.cpp
    maps/SaveGame.cpp
    audio/SoundCatalog.cpp
    SpawnPreview.cpp
    party/SkillData.cpp
    tables/SpeechReactionTable.cpp
    ui/SpellbookUiLayout.cpp
    party/SpellSchool.cpp
    tables/SpellTable.cpp
    tables/SpellFxTable.cpp
    tables/TransitionTable.cpp
    tables/SpriteTables.cpp
    tables/SurfaceMaterialTable.cpp
    tables/TextureFrameTable.cpp
    outdoor/OutdoorGameView.cpp
    ui/GameplayDialogueRenderer.cpp
    ui/GameplayHudRenderer.cpp
    ui/GameplayHudCommon.cpp
    ui/GameplayHudOverlaySupport.cpp
    ui/GameplayHudOverlayRenderer.cpp
    ui/GameplayDebugOverlayRenderer.cpp
    ui/GameplaySpellTargetingOverlayRenderer.cpp
    ui/GameplayUiRenderer.cpp
    gameplay/GameplaySpeechRules.cpp
    gameplay/GameplayScreenRuntime.cpp
    ui/GameplayPartyOverlayRenderer.cpp
    ui/GameplayUiOverlayOrchestrator.cpp
    ui/GameplayUiRuntime.cpp
    ui/KeyboardScreenLayout.cpp
    ui/MenuScreenBase.cpp
    ui/GameplayUiController.cpp
    ui/UiLayoutManager.cpp
    ui/screens/MainMenuScreen.cpp
    ui/screens/ArcomageScreen.cpp
    ui/screens/CutsceneVideoScreen.cpp
    ui/screens/LoadGameScreen.cpp
    ui/screens/LoadingOverlayScreen.cpp
    ui/screens/NewGameScreen.cpp
    ui/screens/WinGameScreen.cpp
    scene/IndoorSceneRuntime.cpp
    scene/OutdoorSceneRuntime.cpp
    app/main.cpp
    app/GameApplication.cpp
    app/KeyboardBindings.cpp
    app/GameSettings.cpp
)

target_include_directories(openyamm
    PRIVATE
        ${CMAKE_SOURCE_DIR}
)

target_compile_definitions(openyamm
    PRIVATE
        OPENYAMM_BGFX_SHADER_DIR="${OPENYAMM_RUNTIME_SHADER_DIR}"
)

target_link_libraries(openyamm
    PRIVATE
        openyamm_engine
        Threads::Threads
        yaml-cpp::yaml-cpp
)

target_compile_features(openyamm PRIVATE cxx_std_20)
add_dependencies(openyamm openyamm_runtime_shaders)
openyamm_target_link_ffmpeg(openyamm)

find_library(OPENYAMM_M_LIBRARY m)
if (OPENYAMM_M_LIBRARY)
    target_link_libraries(openyamm PRIVATE "${OPENYAMM_M_LIBRARY}")
endif()

find_library(OPENYAMM_ATOMIC_LIBRARY atomic)
if (OPENYAMM_ATOMIC_LIBRARY)
    target_link_libraries(openyamm PRIVATE "${OPENYAMM_ATOMIC_LIBRARY}")
endif()

if (UNIX AND NOT APPLE)
    target_link_options(openyamm
        PRIVATE
            "-Wl,-rpath,$ORIGIN/../_deps/sdl3-build"
    )
endif()
